# wzlib-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: deploy-demo.yml
demo/: index.html  styles.css
demo/js/: app.js  edit.js  file-handlers.js  media.js  packed.js  property-view.js  save.js  state.js  tree-view.js  utils.js
src/: lib.rs  wasm_api.rs
src/crypto/: aes_encryption.rs  chacha20.rs  constants.rs  crc32.rs  custom_encryption.rs  maple_crypto.rs  mod.rs  snow2.rs
src/image/: dxt.rs  encode.rs  mod.rs  pixel.rs
src/wz/: binary_reader.rs  binary_writer.rs  directory.rs  error.rs  file.rs  header.rs  image.rs  image_writer.rs  keys.rs  list_file.rs  mcv.rs  mod.rs  ms_file.rs  test_utils.rs  types.rs
src/wz/properties/: mod.rs
ts-wrapper/: README.md
ts-wrapper/src/: types.ts  wz-parser.ts
