[package]
name = "wzlib-rs"
version = "0.1.2"
edition = "2021"
description = "MapleStory WZ file parser — Rust core with optional WASM bindings"
license = "MIT"
repository = "https://github.com/spd789562/wzlib-rs"
readme = "README.md"
keywords = ["maplestory", "wz", "parser", "wzlib"]
categories = ["parser-implementations", "game-development"]
exclude = ["ts-wrapper/", "demo/", ".github/"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
aes = "0.8"
cipher = "0.4"
thiserror = "2"
texture2ddecoder = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
